Correction: remove gap from .menu ul

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -36,7 +36,6 @@
 .menu ul {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 50px;
 }
 
 .menu ul,
